feat: implemented the authentication
